--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -121,10 +121,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速UT`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🎲 智能负载`smart`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🎲 智能负载`smart`[]🛫 极速UT`[]🛫 极速LB`[]🛫 69云`.*`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://cp.cloudflare.com/generate_204`300,,50
@@ -162,6 +162,7 @@ custom_proxy_group=☁️ CFWorker`smart`(CFEP)`http://cp.cloudflare.com/generat
 custom_proxy_group=🛫 极速UT`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速LB`load-balance`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🛫 XSUS`url-test`(XSUS)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 69云`url-test`(69云)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 iKuuu`url-test`(iKuuu)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
