--- a/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_MOD_byiuya.ini
@@ -120,10 +120,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🔮 负载均衡`[]🛫 极速UT`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🔮 负载均衡`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 XSUS`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 69云`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择
@@ -132,10 +132,10 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🔮 负载均衡`[]🛫 极速UT`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
-custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
-custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`[]🐅 胖虎`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
+custom_proxy_group=🎰 SpeedTest`select`[]🎯 全球直连`[]🔮 负载均衡`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
+custom_proxy_group=Ⓜ️ Copilot`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
+custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=📢 谷歌🇨🇳`select`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
@@ -157,12 +157,13 @@ custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=☁️ CFWorker`url-test`(CFEP)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🐅 胖虎`url-test`(胖虎)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🛫 三分`url-test`(三分机场)`http://cp.cloudflare.com/generate_204`300,,50
+;custom_proxy_group=🐅 胖虎`url-test`(胖虎)`http://cp.cloudflare.com/generate_204`300,,50
+;custom_proxy_group=🛫 三分`url-test`(三分机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速UT`url-test`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 极速LB`load-balance`(极速机场)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 XSUS`url-test`(XSUS)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🛫 iKuuu`url-test`(iKuuu)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🛫 69云`url-test`(69云)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
