--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -124,9 +124,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]🎲 智能负载`[]🛫 极速UT`[]🛫 69云`[]🛫 iKuuu`[]☁️ CFWorker`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`[]🛫 三分`[]🛫 XSUS`[]🛫 iKuuu`[]☁️ CFWorker`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🎲 智能负载`smart`[]🛫 极速UT`[]🛫 极速LB`[]🛫 69云`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🎲 智能负载`smart`[]🛫 极速UT`[]🛫 极速LB`[]🛫 69云`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🔮 负载均衡`load-balance`[]🛫 极速UT`[]🛫 极速LB`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`.*`![jiarui]`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`^(?!.*(jiarui)).*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]☁️ CFWorker`[]♻️ 自动选择
 custom_proxy_group=🧮 JIARUI`select`(jiarui)`[]🎯 全球直连`[]🎲 智能负载`[]☁️ CFWorker`[]🚀 手动切换
